added pictures commit

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                     </div>
 
                     <div class="menu-item">
-                        <img src="">
+                        <img src="images/cr.jpg">
                     </div>
                     <div class="menu-item">
-                        <img src="">
+                        <img src="images/hsck.jpg">
                     </div>
                     <div class="menu-item">
-                        <img src="">
+                        <img src="images/hsnd.jpg">
                     </div>
                     <div class="menu-item">
-                        <img src="">
+                        <img src="images/milk-tea.jpg">
                     </div>
                 </div>
             </div>
