styling change commit

--- a/index.html
+++ b/index.html
@@ -71,18 +71,16 @@
             </div>
         </div>
 
-        <div id="order" class="order-here-container red">
+        <div class="order-here-container red">
             <div class="section-content">
                 <h2>Order Here</h2>
                 <div class="order-options">
                     <div class="order-option">
                         <h3>Pickup</h3>
-                        <p>Ready in 15-20 minutes</p>
-                        <button class="order-button"><a href="https://www.beyondmenu.com/25368/edmond/wahaha-express-edmond-73034.aspx">Order for Pickup</a></button>
+                        <button class="order-button"><a href="https://www.beyondmenu.com/25368/edmond/wahaha-express-edmond-73034.aspx">Call for Pickup</a></button>
                     </div>
                     <div class="order-option">
                         <h3>Delivery</h3>
-                        <p>Delivered in 30-45 minutes</p>
                         <button class="order-button"><a href="https://www.beyondmenu.com/25368/edmond/wahaha-express-edmond-73034.aspx">Order for Delivery</a></button>
                     </div>
                 </div>
